# tin

./: dupa  register  server  server.cpp  test
.metadata/.plugins/org.eclipse.cdt.core/: SIPclient.1337628701368.pdom
.metadata/.plugins/org.eclipse.cdt.make.core/: SIPclient.sc
.metadata/.plugins/org.eclipse.cdt.managedbuilder.core/buildState/SIPclient/: SIPclient
.metadata/.plugins/org.eclipse.core.resources/: .snap
.metadata/.plugins/org.eclipse.core.resources/.projects/SIPclient/: .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/SIPclient/.indexes/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: SIPclient.launch
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.epp.usagedata.recording/: upload0.csv  upload1.csv  upload2.csv  usagedata.csv
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/SIPclient/2012/5/21/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
SIPclient/: .cproject  .project  2client.cpp  a.txt  main.cpp  main2.cpp  makefile  md5.c  messages.cpp  messages.h  messagesocket.cpp  parser.cpp  parser.h  rtp.cpp  rtp.h  rtpclient.cpp  rtpclient.h  text.txt  udpmessagesocket.cpp  udpmessagesocket.h
SIPclient/Debug/: SIPclient
jakub_swiatkowski/: 2client  2client.cpp  RTP.cpp  client  client_udp.cpp  dupa  rtp  server  server_udp.cpp  text.txt~  xrtp
kPhone/: .cproject  .project  CHANGES  Doxyfile  HOWTO-Dialer  HOWTO-SRTP  HOWTO-Shortcuts  HOWTO-kphonering  HOWTO-r-FLAG  INSTALL  KPhoneSI.kdevelop  KPhoneSI.kdevelop.filelist  MISSING  Makefile.in  README  README.FIRST  config.h.in  configure.in
kPhone/CVS/: Entries  Repository
kPhone/Speex/: Makefile.in  ltp.cpp  misc.cpp  misc.h  nb_celp.cpp  speex_decode.cpp  speex_define.h  speex_encode.cpp  speex_header.cpp  stack_alloc.h  stereo.cpp  vbr.cpp
kPhone/Speex/CVS/: Entries  Repository
kPhone/dissipate2/: Makefile.in  base64.c  extmessagesocket.cpp  extmessagesocket.h  headerparser.cpp  headerparser.h  messagesocket.cpp  messagesocket.h  mimecontenttype.cpp  mimecontenttype.h  parameterlist.cpp  parameterlist.h  sdpbuild.cpp  sdpbuild.h  sipcall.cpp  sipcall.h  sipclient.cpp  sipclient.h  sipheader.cpp  sipheader.h  sipmessage.cpp  sipmessage.h  sipprotocol.cpp  sipprotocol.h  sippublish.cpp  sippublish.h  sipregister.cpp  sipregister.h  sipstatus.cpp  sipstatus.h  siptransaction.cpp  siptransaction.h  sipuri.cpp  sipuri.h  sipurilist.cpp  sipurilist.h  sipuser.cpp  sipuser.h  siputil.cpp  siputil.h  (+9 more)
kPhone/dissipate2/CVS/: Entries  Repository
kPhone/document/: index.html  usermanual1.html  usermanual10.html  usermanual11.html  usermanual12.html  usermanual13.html  usermanual14.html  usermanual15.html  usermanual2.html  usermanual3.html  usermanual4.html  usermanual5.html  usermanual5a.html  usermanual6.html  usermanual6p.html  usermanual7.html  usermanual8.html  usermanual9.html
kPhone/document/CVS/: Entries  Repository
kPhone/gsm/: Makefile.in  add.cpp  code.cpp  config.h  debug.cpp  decode.cpp  gsm.h  gsm_create.cpp  gsm_decode.cpp  gsm_destroy.cpp  gsm_encode.cpp  gsm_explode.cpp  gsm_implode.cpp  gsm_option.cpp  gsm_print.cpp  long_term.cpp  lpc.cpp  preprocess.cpp  private.h  proto.h  rpe.cpp  short_term.cpp  table.cpp  toast_alaw.cpp  toast_audio.cpp  unproto.h
kPhone/gsm/CVS/: Entries  Repository
kPhone/icons/: Makefile.in
kPhone/icons/CVS/: Entries  Repository
kPhone/ilbc/: Makefile.in  iCBSearch.cpp  iLBC_test.cpp
kPhone/ilbc/CVS/: Entries  Repository
kPhone/kaudio/: Makefile.in  audiobuffer.cpp  audiobuffer.h  codec.h  dspaudio.cpp  dspaudio.h  dspaudioin.cpp  dspaudioin.h  dspaudiojackin.cpp  dspaudiojackin.h  dspaudiojackout.cpp  dspaudiojackout.h  dspaudioout.cpp  dspaudioout.h  dspearly.cpp  dspearly.h  dspout.cpp  dspout.h  dspoutalsa.cpp  dspoutalsa.h  dspoutoss.cpp  dspoutoss.h  dspoutrtp.cpp  dspoutrtp.h  dspouttone.cpp  dspouttone.h  dtmfgenerator.cpp  dtmfgenerator.h  g711.cpp  g711.h  rtpdataheader.h
kPhone/kaudio/CVS/: Entries  Repository  Root
kPhone/kdial/: Makefile.in  kpsidial.c
kPhone/kdial/CVS/: Entries  Repository
kPhone/kphone/: Makefile.in  audiocontrol.cpp  audiocontrol.h  callaudio.cpp  callaudio.h  calllistview.cpp  calllistview.h  extcontrol.cpp  extcontrol.h  idletimedetector.cpp  idletimedetector.h  kcallview.cpp  kcallview.h  kcallwidget.cpp  kcallwidget.h  kdtmf.cpp  kdtmf.h  khelp.cpp  khelp.h  kinstantmessagewidget.cpp  kinstantmessagewidget.h  kphone.1  kphone.cpp  kphone.h  kphonebook.cpp  kphonebook.h  kphoneview.cpp  kphoneview.h  kpsi.1  kreferdialog.cpp  kreferdialog.h  ksipauthentication.cpp  ksipauthentication.h  ksipoptions.cpp  ksipoptions.h  ksippreferences.cpp  ksippreferences.h  ksipregistrations.cpp  ksipregistrations.h  kstatics.cpp  (+12 more)
kPhone/kphone/CVS/: Entries  Repository
kPhone/po/: Makefile.in  kphone_de.ts  kphone_es_ES.ts  kphone_fi.ts  kphone_fr.ts  kphone_hu.ts  kphone_nolang.ts  kphone_pl_PL.ts  kphone_pt_BR.ts  kphone_sv.ts
kPhone/po/CVS/: Entries  Repository
kPhone/ringing/: Makefile.in  kphonering.cpp  kphoneringsh
kPhone/ringing/CVS/: Entries  Repository
kPhone/srtp/: SRTPWrapper.cpp  SRTPWrapper.h
kPhone/srtp-1.4/: Makefile.in  SRTPWrapper.cpp  SRTPWrapper.h
kPhone/srtp-1.4/CVS/: Entries  Repository
kPhone/srtp/CVS/: Entries  Repository
src/pl/waw/mizinski/pszt/: Pszt.java
src/pl/waw/mizinski/pszt/controller/: Controller.java  PsztAction.java
src/pl/waw/mizinski/pszt/event/: DominationUpdateEvent.java  MutationUpdateEvent.java  PsztEvent.java  SizeUpdateEvent.java  StartEvent.java  StopEvent.java  WriteEvent.java
src/pl/waw/mizinski/pszt/model/: Model.java
src/pl/waw/mizinski/pszt/model/population/: Population.java
src/pl/waw/mizinski/pszt/view/: View.java
